- I don't like the macros to convert io_del into io_select_del.  Anything better we can do?
- need to try to regain type safety in multi.c:io_init.  get rid of all those void*!
- write poll
- write epoll
- write multi