@@ -1,7 +1,8 @@
-// iotest.c
+// socktest.c
 // Scott Bronson
-// 11 Aug 2004
+// 10 Mar 2007
 //
+// This is just iotest.c ported to use the io/socket utilities.
 // Run this program then "telnet localhost 21314" a bunch of times.
 // It just echoes each socket's input back.
 //
@@ -21,15 +22,14 @@
 #include <netinet/in.h>
 #include <arpa/inet.h>
 
-#include "poller.h"
+#include "socket.h"
 
 
 #define PORT 21314
 
 
 io_poller poller;
-io_atom g_accepter;   // the listening socket
-char g_char = 'A';
+io_atom accepter;   // the listening socket
 char readbuf[1024];
 
 
@@ -38,26 +38,6 @@ typedef struct {
 	char c;
 	int chars_processed;
 } connection;
-
-
-int set_nonblock(int sd)
-{
-    int flags = 1;
-
-    // set nonblocking IO on the socket
-    if(ioctl(sd, FIONBIO, &flags)) {
-        // ioctl failed -- try alternative
-        flags = fcntl(sd, F_GETFL, 0);
-        if(flags < 0) {
-            return -1;
-        }
-        if(fcntl(sd, F_SETFL, flags | O_NONBLOCK) < 0) {
-            return -1;
-        }
-    }
-
-    return 0;
-}
 
 
 void connection_close(connection *conn)
@@ -119,122 +99,50 @@ void connection_proc(io_atom *ioa, int flags)
 
 void accept_proc(io_atom *ioa, int flags)
 {
-    connection *conn;
-    struct sockaddr_in pin;
-    socklen_t plen;
-    int sd;
+	connection *conn;
+	socket_addr remote;
 
 	// since the accepter only has IO_READ anyway, there's no need to
 	// check the flags param.
 
-    plen = sizeof(pin);
-    while((sd = accept(ioa->fd, (struct sockaddr*)&pin, &plen)) < 0) {
-        if(errno == EINTR) {
-            // This call was interrupted by a signal.  Try again and
-            // see if we receive a connection.
-            continue;
-        }
-        if(errno == EAGAIN || errno == EWOULDBLOCK) {
-            // socket is marked nonblocking but no pending connections
-            // are present.  Weird.  I guess we should succeed but do nothing.
-            return;
-        }
-
-        // Probably there is a network error pending for this
-        // connection (already!).  Should probably just ignore it...?
-        return;
-    }
-
-    if(set_nonblock(sd) < 0) {
-        printf("Could not set nonblocking: %s.\n", strerror(errno));
-        close(sd);
-        return;
-    }
-
     conn = malloc(sizeof(connection));
-    if(!conn) {
-		close(sd);
+	if(!conn) {
+		perror("allocating connection");
 		return;
 	}
 
-	conn->io.fd = sd;
-	conn->io.proc = connection_proc;
-
-	if(io_add(&poller, &conn->io, IO_READ) < 0) {
-		perror("io_add_main");
-		close(sd);
-		exit(1);
+	if(io_socket_accept(&poller, &conn->io, connection_proc, IO_READ, &accepter, &remote) < 0) {
+		perror("connecting to remote");
+		return;
 	}
 
 	printf("connection opened from %s port %d given fd %d\n",
-		inet_ntoa(pin.sin_addr), ntohs(pin.sin_port), conn->io.fd);
-}
-
-
-void event_loop()
-{
-	int cnt;
-	
-	for(;;) {
-		cnt = io_wait(&poller, MAXINT);
-		if(cnt < 0) {
-			perror("io_wait");
-		}
-		if(cnt > 0) {
-			io_dispatch(&poller);
-		}
-	}
+		inet_ntoa(remote.addr), remote.port, conn->io.fd);
 }
 
 
 int main(int argc, char **argv)
 {
-	int sd;
-	struct sockaddr_in sin;
-	
+	const socket_addr addr = { { htonl(INADDR_ANY) }, 21314 };
+
 	io_init(&poller);
 	printf("Opening listening socket...\n");
 
-	if((sd = socket(AF_INET, SOCK_STREAM, 0)) < 0) {
-		perror("socket");
-		exit(1);
-	}
-
-	if(set_nonblock(sd) < 0) {
-		perror("setnonblocking");
-		close(sd);
-		exit(1);
-	}
-
-	memset(&sin, 0, sizeof(sin));
-	sin.sin_family = AF_INET;
-	sin.sin_port = htons(PORT);
-	sin.sin_addr.s_addr = htonl(INADDR_ANY);
-
-	if(bind(sd, (struct sockaddr*)&sin, sizeof(sin)) < 0) {
-		perror("bind");
-		close(sd);
-		exit(1);
-	}
-
-	if (listen(sd, STD_LISTEN_SIZE) == -1) {
+	if(io_socket_listen(&poller, &accepter, accept_proc, addr) < 0) {
 		perror("listen");
-		close(sd);
 		exit(1);
 	}
 
-	g_accepter.fd = sd;
-	g_accepter.proc = accept_proc;
+	printf("Listening on port %d, fd %d.\n", addr.port, accepter.fd);
 
-	if(io_add(&poller, &g_accepter, IO_READ) < 0) {
-		perror("io_add_main");
-		close(sd);
-		exit(1);
+	for(;;) {
+		if(io_wait(&poller, MAXINT) < 0) {
+			perror("io_wait");
+		}
+		io_dispatch(&poller);
 	}
 
-	printf("Listening on port %d, fd %d.\n", PORT, g_accepter.fd);
-	event_loop();
-
+	io_delete(&poller, &accepter);
 	io_exit(&poller);
 
 	return 0;
