@@ -1,5 +1,12 @@
+- Add an io-config much like mutest-config
 - I don't like the macros to convert io_del into io_select_del.  Anything better we can do?
 - need to try to regain type safety in multi.c:io_init.  get rid of all those void*!
 - write poll
 - write epoll
 - write multi
+
+* Need to make multi-poller the default.  Otherwise the files get hard to compile.
+  (i.e., how do I tell socket.c what poller we're using?  It's possible dirty.)
+* Added multi-poller to select a poller at runtime
+  (still need to make it fall back to other pollers if errors in init)
+* Made routines thread safe.  No globals are used whatsoever.
